[0, 15, 64]: 2018-08-30
  - support round-trip of tagged sequences: ``!Arg [a, {b: 1}]``
  - single entry mappings in flow sequences now written by default without quotes
    set ``yaml.brace_single_entry_mapping_in_flow_sequence=True`` to force
    getting ``[a, {b: 1}, {c: {d: 2}}]`` instead of the default ``[a, b: 1, c: {d: 2}]``
  - fix issue when roundtripping floats starting with a dot such as ``.5``
    (reported by `Harrison Gregg <https://bitbucket.org/HarrisonGregg/>`__)

[0, 15, 63]: 2018-08-29
  - small fix only necessary for Windows users that don't use wheels.

[0, 15, 62]: 2018-08-29
  - C based reader/scanner & emitter now allow setting of 1.2 as YAML version.
    ** The loading/dumping is still YAML 1.1 code**, so use the common subset of
    YAML 1.2 and 1.1 (reported by `Ge Yang <https://bitbucket.org/yangge/>`__)

[0, 15, 61]: 2018-08-23
  - support for round-tripping folded style scalars (initially requested 
    by `Johnathan Viduchinsky <https://bitbucket.org/johnathanvidu/>`__)
  - update of C code
  - speed up of scanning (~30% depending on the input)

[0, 15, 60]: 2018-08-18
  - cleanup for mypy 
  - spurious print in library (reported by 
    `Lele Gaifax <https://bitbucket.org/lele/>`__), now automatically checked 

[0, 15, 59]: 2018-08-17
  - issue with C based loader and leading zeros (reported by 
    `Tom Hamilton Stubber <https://bitbucket.org/TomHamiltonStubber/>`__)

[0, 15, 59]: 2018-08-17
  - issue with C based loader and leading zeros (reported by 
    `Tom Hamilton Stubber <https://bitbucket.org/TomHamiltonStubber/>`__)

[0, 15, 58]: 2018-08-17
  - simple mappings can now be used as keys when round-tripping::

      {a: 1, b: 2}: hello world
      
    although using the obvious operations (del, popitem) on the key will
    fail, you can mutilate it by going through its attributes. If you load the
    above YAML in `d`, then changing the value is cumbersome:

        d = {CommentedKeyMap([('a', 1), ('b', 2)]): "goodbye"}
