@@ -182,7 +182,7 @@ def test_example_2_12():
 @pytest.mark.xfail(strict=True)
 def test_example_2_13():
     yaml = YAML()
-    yaml.round_trip("""
+    yaml.round_trip(r"""
     # ASCII Art
     --- |
       \//||\/||
