@@ -1,3 +1,11 @@
+[0, 15, 65]: 2018-09-07
+  - fix issue #232 revert to throw ParserError for unexcpected ``]``
+    and ``}`` instead of IndexError. (Issue reported and PR with fix
+    provided by `Naomi Seyfer <https://bitbucket.org/sixolet/>`__.)
+  - added ``key`` and ``reverse`` parameter (suggested by Jannik Klemm via email)
+  - indent root level literal scalars that have directive or document end markers
+    at the beginning of a line
+
 [0, 15, 64]: 2018-08-30
   - support round-trip of tagged sequences: ``!Arg [a, {b: 1}]``
   - single entry mappings in flow sequences now written by default without quotes
